SecretAgentSupply/resources/css/style.css
html {
  font-size: 18px;
}

body {
  font-family: Helvetica;
  color: white;
  max-width: 960px;
  margin: 0 auto;
  overflow: visible;
}

.header {
  background-color: black;
  width: auto;
  top: 0px;
  padding: 0.5rem;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.header img {
  height: 1.5rem;
}

.header h5 {
  padding: 0.5rem 0.66rem;
}

.banner {
  background-image: url("../images/moto.jpeg");
  height: 25rem;
  width: 100%;
  overflow: hidden;
}

.banner-title {
  font-weight: bold;
  background-color: black;
  width: 20rem;
  margin-top: 9rem;
  padding: 2rem 3rem;
  align-content: space-between;
}

/* fix the 0.25rem between lines*/

.banner-title h1 {
  font-size: 2rem;
  padding-top: 0.25rem;
  flex-wrap: wrap;
}

.nav {
  background-color: firebrick;
  padding: 0.75rem;
  width: auto;
}

.desktop-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#products-container {
  margin-top: 3rem;
}

.products {
  border: 4px solid black;
  display: inline-flex;
  width: 30%;
  flex-direction: column;
}

.products img {
  padding: 2rem 0;
  max-height: 9rem;
  width: auto;
  justify-content: center;
  align-items: center;
}
/* Fix images and captions */
.products p {
  background-color: black;
  padding: 0.5rem 0;
  width: 0 auto;
  justify-content: center;
  align-items: center;
}

#more-info {
  margin-top: 3rem;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
}

.location {
  flex-direction: column;
  width: 35%;
}

.location h5 {
  background-color: black;
  padding: 1rem 2rem;

}

.location p {
  color: black;
}

.hours {
  flex-direction: column;
  width: 35%;
}

.hours h5 {
  background-color: black;
  padding: 1rem 2rem;
}

.hours p {
  color: black;
}

.footer {
  background-color: black;
  margin-top: 4rem;
  height: 5rem;
  display: flex;
  align-items: center;
}

